Devel::Cover.pm history

Release 0.54 - 22nd September 2005
 - Add -gcov option to cover and make it default when using gcc.
 - Remolve unused File::Find from cpancover.
 - Document how to get XS coverage in gcov2perl.

Release 0.54 - 13th September 2005
 - Make html_basic prettier.
 - Fix pod coverage percentages.
 - Fix integer <-> pointer conversion warnings (Robin Barker).
 - Add more tests for sort bug fixed in 0.53 (Rob Kinyon).
 - Handle || bless {}, "XXX" (reported by Marcel Grünauer).
 - Add preliminary dor support (unfinished).
 - Test against perl-5.8.7.
 - Add check for Pod::Coverage::CountParents.
 - Fix line number display problem in conditionals in Html_basic.
 - Add eval_sub and eval3 tests.
 - Add buildperl script.
 - Add -report option to cpancover.
 - Update cpancover CSS.
 - Partial solution for structure problems including debugging code.
 - Add outputfile option to Html_basic.

Release 0.53 - 17th April 2005
 - Clean up database directories.
 - Allow require File::Spec->catfile('t', 'common.pl'); (from an example by
   Randy W. Sims).
 - Fix core dump associated with sort subs and add test case supplied by
   Leif Eriksen.
 - Add extra options for coverage criteria.
 - Allow pod coverage options to be specified.
 - Update copyrights.
 - Allow Test::Differences output to be displayed usefully.
 - Test against perl-5.9.3.

Release 0.52 - 13th December 2004
 - Fix thread locking bug (Ruslan Zakirov).
 - Make valgrind happy.
 - Fix gcov2perl (Steve Peters).
 - Restore failure message to CLONE.

Release 0.51 - 29th November 2004
 - Handle $y || undef.
 - Small branch coverage fix.
 - Improve reporting of uncoverable constructs in html reports.
 - Test against perl-5.8.6.
 - Recommend at least perl-5.8.2.

Release 0.50 - 25th October 2004
 - Add -test option to cover.
 - Fix missing coverage when calling a sub in an ignored module.
 - Add module_ignore test.
 - Add uncoverable options to cover.

Release 0.49 - 6th October 2004